--- a/package.json
+++ b/package.json
@@ -2,12 +2,32 @@
   "name": "icebreaker",
   "version": "1.0.0",
   "description": "Icebreaker social messaging application",
-  "main": "index.js",
+  "main": "server.js",
+  "scripts": {
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "node server.js",
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+    "client": "cd client && npm run start",
+    "seed": "node scripts/seedDB.js",
+    "install": "cd client && yarn install",
+    "build": "cd client && npm run build",
+    "heroku-postbuild": "npm run build"
+  },
   "repository": "https://github.com/dsmathews/icebreaker.git",
   "author": "Pamela Anderson, Jessica McCormack, Joshua Jeng, David Blais, Scott Mathews",
   "license": "MIT",
+  "devDependencies": {
+    "concurrently": "^3.5.0",
+    "nodemon": "^1.18.7"
+  },
   "dependencies": {
+    "axios": "^0.16.2",
+    "bootstrap": "^4.1.3",
     "express": "^4.16.4",
-    "mongoose": "^5.3.14"
+    "if-env": "^1.0.4",
+    "mongoose": "^5.3.14",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "reactstrap": "^6.5.0"
   }
 }
