--- a/package.json
+++ b/package.json
@@ -22,12 +22,16 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^4.1.3",
     "express": "^4.16.4",
     "if-env": "^1.0.4",
+    "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.3.14",
+    "mongoose-unique-validator": "^2.0.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-router-dom": "^4.3.1",
     "reactstrap": "^6.5.0"
   }
 }
