--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^0.16.2",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.1.3",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "if-env": "^1.0.4",
     "jsonwebtoken": "^8.4.0",
