The chat app is functional within the current master branch. Still needs work.

--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
+    "@pusher/chatkit-client": "^1.2.1",
+    "@pusher/chatkit-server": "^1.0.4",
     "axios": "^0.18.0",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
